# Othello

./: CMakeLists.txt  README.md  board.c  board.h  board.hh  board_getTested.c  board_tests.cc  makefile
